<resources>
    <string name="app_name" translatable="false">Soldier</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Config</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string name="menu_item_import_config_policy_group">Add [Policy group]</string>
    <string name="menu_item_import_config_proxy_chain">Add [Proxy chain]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Add [Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Add [Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_core_settings">Core Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="title_pref_auto_remove_invalid_after_test">Auto delete invalid config after testing</string>
    <string name="summary_pref_auto_remove_invalid_after_test">Test results may not be accurate; deleted config cannot be recovered.</string>
    <string name="title_pref_auto_sort_after_test">Auto sort after testing</string>
    <string name="summary_pref_auto_sort_after_test">Test results may not be accurate;</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Faster, but it may cause unstable connectivity\nCustomize how to handle TCP, UDP and QUIC below</string>
    <string name="title_pref_mux_concurency">TCP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_concurency">XUDP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="summary_pref_sniffing_enabled">Try sniff domain from the packet (default on)</string>
    <string name="title_pref_route_only_enabled">Enable routeOnly</string>
    <string name="summary_pref_route_only_enabled">Use the sniffed domain name for routing only, and keep the target address as the IP address.</string>
    <string name="title_pref_local_dns_enabled">Enable local DNS</string>
    <string name="summary_pref_local_dns_enabled">DNS processed by core‘s DNS module (Recommended if you need routing bypassing LAN and mainland addresses)</string>
    <string name="title_pref_fake_dns_enabled">Enable fake DNS</string>
    <string name="summary_pref_fake_dns_enabled">Local DNS returns fake IP addresses (faster, but it may not work for some apps)</string>
    <string name="title_pref_ipv6_enabled">Enable IPv6</string>
    <string name="summary_pref_ipv6_enabled">Add IPv6 address and routes to the VPN interface</string>
    <string name="title_pref_prefer_ipv6">Prefer IPv6</string>
    <string name="summary_pref_prefer_ipv6">Prefer IPv6 addresses when resolving domain names</string>
    <string name="title_pref_remote_dns">Remote DNS (udp/tcp/https/quic)(Optional)</string>
    <string name="summary_pref_remote_dns">DNS</string>
    <string name="title_pref_vpn_dns">VPN DNS (only IPv4/v6)</string>
    <string name="title_pref_vpn_bypass_lan">Does VPN bypass LAN</string>
    <string name="title_pref_vpn_interface_address">VPN Interface Address</string>
    <string name="title_pref_vpn_mtu">VPN MTU (default 1500)</string>
    <string name="title_pref_domestic_dns">Domestic DNS (Optional)</string>
    <string name="summary_pref_domestic_dns">DNS</string>
    <string name="title_pref_dns_hosts">DNS hosts (Format: domain:address,…)</string>
    <string name="summary_pref_dns_hosts">domain:address,…</string>
    <string name="title_pref_delay_test_url">True delay test url </string>
    <string name="summary_pref_delay_test_url">Url</string>
    <string name="title_pref_real_ping_concurrency">True delay test concurrency</string>
    <string name="title_pref_ip_api_url">Current connection info test url</string>
    <string name="summary_pref_ip_api_url">Url</string>
    <string name="title_pref_proxy_sharing_enabled">Allow connections from the LAN</string>
    <string name="summary_pref_proxy_sharing_enabled">Other devices can connect to proxy by your IP address through local proxy. Only enable in trusted networks to avoid unauthorized connections</string>
    <string name="title_pref_socks_port">Local proxy port</string>
    <string name="title_pref_enable_local_proxy">Enable local proxy</string>
    <string name="summary_pref_enable_local_proxy">When disabled, no SOCKS proxy is available, so subscription updates and similar actions cannot use the proxy</string>
    <string name="title_pref_socks_enable_udp">SOCKS5 UDP</string>
    <string name="summary_pref_socks_enable_udp">SOCKS5 authentication is not fully secure when using UDP.</string>
    <string name="title_pref_dynamic_socks_port">Enable dynamic local proxy port</string>
    <string name="summary_pref_dynamic_socks_port">Generate a random local proxy port each time the inbound is created</string>
    <string name="title_pref_socks_username">Local proxy username (optional)</string>
    <string name="summary_pref_socks_username">Username</string>
    <string name="title_pref_socks_password">Local proxy password (optional)</string>
    <string name="summary_pref_socks_password">Password</string>
    <string name="title_pref_confirm_remove">Delete config confirmation</string>
    <string name="summary_pref_confirm_remove">Whether deleting a config requires a second confirmation by the user</string>
    <string name="title_pref_start_scan_immediate">Start scanning immediately</string>
    <string name="summary_pref_start_scan_immediate">Open the camera to scan immediately at startup, otherwise you can choose to scan the code or select a photo in the toolbar</string>
    <string name="title_pref_append_http_proxy">Append HTTP Proxy to VPN</string>
    <string name="summary_pref_append_http_proxy">HTTP proxy will be used directly from (browser/ some supported apps), without going through the virtual NIC device (Android 10+)</string>
    <string name="title_pref_double_column_display">Enable double column display</string>
    <string name="summary_pref_double_column_display">The profile list is displayed in double columns, allowing more content to be displayed on the screen. You need to restart the application to take effect.</string>
    <string name="title_pref_group_all_display">Enable show all groups</string>
    <string name="summary_pref_group_all_display">Add an extra "All Tabs" page</string>
    <string name="title_core_loglevel">Log Level</string>
    <string name="title_outbound_domain_resolve_method">Outbound domain pre-resolve method</string>
    <string name="title_mode">Mode</string>
    <string name="title_language">Language</string>
    <string name="title_ui_settings">UI settings</string>
    <string name="title_pref_ui_mode_night">UI mode settings</string>
    <string name="title_pref_use_hev_tunnel">Enable Hev TUN Feature</string>
    <string name="summary_pref_use_hev_tunnel">When enabled, TUN will use hev-socks5-tunnel; otherwise, it will use xray-core.</string>
    <string name="title_pref_hev_tunnel_loglevel">Hev Tun Log Level</string>
    <string name="title_pref_hev_tunnel_rw_timeout">Hev Tun read/write timeout (seconds) (tcp,udp default 300,60)</string>
    <string name="title_fragment_settings">Fragment Settings</string>
    <string name="title_pref_fragment_packets">Fragment Packets</string>
    <string name="title_pref_fragment_length">Fragment Length (min-max)</string>
    <string name="title_pref_fragment_interval">Fragment Interval (min-max)</string>
    <string name="title_pref_fragment_enabled">Enable Fragment</string>
    <string name="title_pref_fragment_maxsplit">Fragment Max Split</string>
</resources>