<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_ui_settings">
        <CheckBoxPreference
            android:key="pref_speed_enabled"
            android:summary="@string/summary_pref_speed_enabled"
            android:title="@string/title_pref_speed_enabled" />

        <CheckBoxPreference
            android:key="pref_confirm_remove"
            android:summary="@string/summary_pref_confirm_remove"
            android:title="@string/title_pref_confirm_remove" />

        <CheckBoxPreference
            android:key="pref_start_scan_immediate"
            android:summary="@string/summary_pref_start_scan_immediate"
            android:title="@string/title_pref_start_scan_immediate" />

        <CheckBoxPreference
            android:key="pref_double_column_display"
            android:summary="@string/summary_pref_double_column_display"
            android:title="@string/title_pref_double_column_display" />

        <CheckBoxPreference
            android:key="pref_group_all_display"
            android:summary="@string/summary_pref_group_all_display"
            android:title="@string/title_pref_group_all_display" />

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/language_select"
            android:entryValues="@array/language_select_value"
            android:key="pref_language"
            android:summary="%s"
            android:title="@string/title_language" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/ui_mode_night"
            android:entryValues="@array/ui_mode_night_value"
            android:key="pref_ui_mode_night"
            android:summary="%s"
            android:title="@string/title_pref_ui_mode_night" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_vpn_settings">
        <CheckBoxPreference
            android:key="pref_ipv6_enabled"
            android:summary="@string/summary_pref_ipv6_enabled"
            android:title="@string/title_pref_ipv6_enabled" />

        <CheckBoxPreference
            android:key="pref_prefer_ipv6"
            android:summary="@string/summary_pref_prefer_ipv6"
            android:title="@string/title_pref_prefer_ipv6" />

<!--        <CheckBoxPreference-->
<!--            android:key="pref_per_app_proxy"-->
<!--            android:summary="@string/summary_pref_per_app_proxy"-->
<!--            android:title="@string/title_pref_per_app_proxy" />-->

        <CheckBoxPreference
            android:key="pref_local_dns_enabled"
            android:summary="@string/summary_pref_local_dns_enabled"
            android:title="@string/title_pref_local_dns_enabled" />

        <CheckBoxPreference
            android:key="pref_fake_dns_enabled"
            android:summary="@string/summary_pref_fake_dns_enabled"
            android:title="@string/title_pref_fake_dns_enabled" />

        <CheckBoxPreference
            android:key="pref_append_http_proxy"
            android:summary="@string/summary_pref_append_http_proxy"
            android:title="@string/title_pref_append_http_proxy" />

<!--        <EditTextPreference-->
<!--            android:inputType="number"-->
<!--            android:key="pref_local_dns_port"-->
<!--            android:summary="10853"-->
<!--            android:title="@string/title_pref_local_dns_port" />-->

        <EditTextPreference
            android:key="pref_vpn_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_vpn_dns" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/vpn_bypass_lan"
            android:entryValues="@array/vpn_bypass_lan_value"
            android:key="pref_vpn_bypass_lan"
            android:summary="%s"
            android:title="@string/title_pref_vpn_bypass_lan" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/vpn_interface_address"
            android:entryValues="@array/vpn_interface_address_value"
            android:key="pref_vpn_interface_address_config_index"
            android:summary="%s"
            android:title="@string/title_pref_vpn_interface_address" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_vpn_mtu"
            android:summary="1500"
            android:title="@string/title_pref_vpn_mtu" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_use_hev_tunnel_v2"
            android:summary="@string/summary_pref_use_hev_tunnel"
            android:title="@string/title_pref_use_hev_tunnel" />

        <ListPreference
            android:defaultValue="warn"
            android:entries="@array/hev_tunnel_loglevel"
            android:entryValues="@array/hev_tunnel_loglevel"
            android:key="pref_hev_tunnel_loglevel"
            android:summary="%s"
            android:title="@string/title_pref_hev_tunnel_loglevel" />

        <EditTextPreference
            android:key="pref_hev_tunnel_rw_timeout_v2"
            android:summary="300,60"
            android:title="@string/title_pref_hev_tunnel_rw_timeout" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_core_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_sniffing_enabled"
            android:summary="@string/summary_pref_sniffing_enabled"
            android:title="@string/title_pref_sniffing_enabled" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_route_only_enabled"
            android:summary="@string/summary_pref_route_only_enabled"
            android:title="@string/title_pref_route_only_enabled" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_enable_local_proxy"
            android:summary="@string/summary_pref_enable_local_proxy"
            android:title="@string/title_pref_enable_local_proxy" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_proxy_sharing_enabled"
            android:summary="@string/summary_pref_proxy_sharing_enabled"
            android:title="@string/title_pref_proxy_sharing_enabled" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_socks_port"
            android:summary="10808"
            android:title="@string/title_pref_socks_port" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_dynamic_socks_port"
            android:summary="@string/summary_pref_dynamic_socks_port"
            android:title="@string/title_pref_dynamic_socks_port" />

        <EditTextPreference
            android:key="pref_socks_username"
            android:summary="@string/summary_pref_socks_username"
            android:title="@string/title_pref_socks_username" />

        <EditTextPreference
            android:inputType="textPassword"
            android:key="pref_socks_password"
            android:summary="@string/summary_pref_socks_password"
            android:title="@string/title_pref_socks_password" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_socks_enable_udp"
            android:summary="@string/summary_pref_socks_enable_udp"
            android:title="@string/title_pref_socks_enable_udp" />

        <EditTextPreference
            android:key="pref_remote_dns"
            android:summary="@string/summary_pref_remote_dns"
            android:title="@string/title_pref_remote_dns" />

        <EditTextPreference
            android:key="pref_domestic_dns"
            android:summary="@string/summary_pref_domestic_dns"
            android:title="@string/title_pref_domestic_dns" />

        <EditTextPreference
            android:key="pref_dns_hosts"
            android:summary="@string/summary_pref_dns_hosts"
            android:title="@string/title_pref_dns_hosts" />

        <ListPreference
            android:defaultValue="warning"
            android:entries="@array/core_loglevel"
            android:entryValues="@array/core_loglevel"
            android:key="pref_core_loglevel"
            android:summary="%s"
            android:title="@string/title_core_loglevel" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/outbound_domain_resolve_method"
            android:entryValues="@array/outbound_domain_resolve_method_value"
            android:key="pref_outbound_domain_resolve_method"
            android:summary="%s"
            android:title="@string/title_outbound_domain_resolve_method" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_mux_settings"
        app:initialExpandedChildrenCount="0">
        <CheckBoxPreference
            android:key="pref_mux_enabled"
            android:summary="@string/summary_pref_mux_enabled"
            android:title="@string/title_pref_mux_enabled" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_concurency" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_mux_xudp_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_xudp_concurency" />

        <ListPreference
            android:defaultValue="reject"
            android:entries="@array/mux_xudp_quic_entries"
            android:entryValues="@array/mux_xudp_quic_value"
            android:key="pref_mux_xudp_quic"
            android:summary="%s"
            android:title="@string/title_pref_mux_xudp_quic" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_fragment_settings"
        app:initialExpandedChildrenCount="0">
        <CheckBoxPreference
            android:key="pref_fragment_enabled"
            android:title="@string/title_pref_fragment_enabled" />

        <ListPreference
            android:key="pref_fragment_preset"
            android:title="Fragment Preset"
            android:summary="Select a preset (can still edit manually)"
            android:defaultValue="0"
            android:entries="@array/fragment_preset_entries"
            android:entryValues="@array/fragment_preset_values" />

        <EditTextPreference
            android:key="pref_fragment_length"
            android:summary="1-1"
            android:title="@string/title_pref_fragment_length" />

        <EditTextPreference
            android:key="pref_fragment_interval"
            android:summary="0-0"
            android:title="@string/title_pref_fragment_interval" />

        <EditTextPreference
            android:key="pref_fragment_maxsplit"
            android:summary="10"
            android:title="@string/title_pref_fragment_maxsplit" />

        <ListPreference
            android:defaultValue="tlshello"
            android:entries="@array/fragment_packets"
            android:entryValues="@array/fragment_packets"
            android:key="pref_fragment_packets"
            android:summary="%s"
            android:title="@string/title_pref_fragment_packets" />

        <ListPreference
            android:defaultValue="sni_split"
            android:entries="@array/fragment_strategy"
            android:entryValues="@array/fragment_strategy_value"
            android:key="pref_fragment_strategy"
            android:summary="%s"
            android:title="Fragment Strategy" />
    </PreferenceCategory>

<PreferenceCategory
    android:title="CDN IP (TLS)">

    <CheckBoxPreference
        android:key="pref_enable_sni_spoof"
        android:title="Enable CDN IP (Tls)"
        android:summary="Only Works With Tls Configs (Vless/Vmess/Shadowsocks/Trojan/Hysteria2)"
        android:defaultValue="false" />

    <EditTextPreference
        android:key="pref_spoof_ip"
        android:title="IP"
        android:dependency="pref_enable_sni_spoof" />

    <EditTextPreference
        android:key="pref_spoof_port"
        android:title="Port"
        android:inputType="number"
        android:defaultValue="443"
        android:dependency="pref_enable_sni_spoof" />

</PreferenceCategory>

    <PreferenceCategory android:title="CDN Spoof Settings">
        <CheckBoxPreference
            android:key="pref_enable_cdn_spoof"
            android:title="Enable CDN Spoof"
            android:summary="Use CDN domain for routing in heavy filtering"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="pref_cdn_domain"
            android:title="CDN Domain"
            android:summary="Example: www.hcaptcha.com or akamai"
            android:dependency="pref_enable_cdn_spoof" />
            
    </PreferenceCategory>

    <PreferenceCategory android:title="DNS Resolver Settings">
        <CheckBoxPreference
            android:key="pref_enable_dns_resolver"
            android:title="Enable DNS Resolver"
            android:summary="Custom DNS for all configs"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="pref_dns_resolver"
            android:title="DNS Resolver List"
            android:summary="Example: 8.8.8.8,1.1.1.1,9.9.9.9"
            android:dependency="pref_enable_dns_resolver" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/title_advanced">

        <CheckBoxPreference
            android:key="pref_is_booted"
            android:summary="@string/summary_pref_is_booted"
            android:title="@string/title_pref_is_booted" />

        <CheckBoxPreference
            android:key="pref_auto_remove_invalid_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_remove_invalid_after_test"
            android:title="@string/title_pref_auto_remove_invalid_after_test" />

        <CheckBoxPreference
            android:key="pref_auto_sort_after_test"
            android:defaultValue="false"
            android:summary="@string/summary_pref_auto_sort_after_test"
            android:title="@string/title_pref_auto_sort_after_test" />

        <EditTextPreference
            android:key="pref_delay_test_url"
            android:summary="@string/summary_pref_delay_test_url"
            android:title="@string/title_pref_delay_test_url" />

        <EditTextPreference
            android:inputType="number"
            android:key="pref_real_ping_concurrency"
            android:summary="16"
            android:title="@string/title_pref_real_ping_concurrency" />

        <EditTextPreference
            android:key="pref_ip_api_url"
            android:summary="@string/summary_pref_ip_api_url"
            android:title="@string/title_pref_ip_api_url" />

        <ListPreference
            android:defaultValue="VPN"
            android:entries="@array/mode_entries"
            android:entryValues="@array/mode_value"
            android:key="pref_mode"
            android:summary="%s"
            android:title="@string/title_mode" />

    </PreferenceCategory>

</PreferenceScreen>